Improve choice member translation

--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -29,7 +29,7 @@ same_vote: Same vote
 different_vote: Different vote
 add_member: Add member
 add_members: Add members
-choice_member: Choice member
+choice_member: Choose a member
 search: Search
 list_difference_vote: List of different votes
 list_same_vote: List of similar votes
