--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -31,6 +31,7 @@ filter:
     group: Political group
     country: MP's country
     party: MP's party
+    mp_status: MP's status
 
 same_vote: Same vote
 different_vote: Different vote
@@ -69,3 +70,8 @@ open_fullscreen: Open the map in a full screen
 compare: Compare
 vote_information: Votes where the MP was not present are not taken into account in the comparison.
 matrix_loading_information: It can take time to load all the data
+
+mp_status_list:
+    active: While in office
+    retired: Retired
+    all: All
