Fix vote value translation

--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -39,6 +39,7 @@ form:
                 placeholder: Choose a member
             member_collection:
                 placeholder: Choose a member
+            vote_value: Position
 
 global:
     search: Search
